Primeiro exercício html finalizado

--- a/index.html
+++ b/index.html
@@ -5,27 +5,33 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <img src="ifpr.png" alt="Logo do IFPR" />
+    <img src="imagens/ifpr.png" alt="Logo do IFPR" />
 
     <h1>Instituto Federal do Paraná</h1>
 
     <h2>Campus Paranaguá</h2>
 
     <img
-      src="imagens/campus-paranagua.jpg"
+      src="https://scontent.fbfh4-1.fna.fbcdn.net/v/t1.6435-9/119672765_107030544484853_3747988333673008301_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=e3f864&_nc_eui2=AeFP2A4ONpKe-4IEI897FdVVaN7JnbPJyrRo3smds8nKtFvL0cO453BGi3Z0yR8SdJ7iJS0Z8rMFqcuXEV7wvq_p&_nc_ohc=QYozjg1sl1YAX9KX7a0&_nc_ht=scontent.fbfh4-1.fna&oh=2a4a98593f722de52c1d81d883abcf26&oe=60BB94B3"
       alt="Foto aérea do campus Paranaguá"
     />
 
     <ul>
       <li>
-        <a href="instituto.html">O Instituto</a>
+        <a href="#instituto">Instituto</a>
       </li>
-      <li>Localização</li>
+      <li>
+        <a href="local.html">Localização</a>
+      </li>
       <li>
         <a href="quem.html">Quem somos</a>
       </li>
-      <li>Cursos</li>
-      <li>Venha estudar no nosso campus</li>
+      <li>
+        <a href="cursos.html">Cursos</a>
+      </li>
+      <li>
+        <a href="artigos/venha_estudar.html">Venha estudar no nosso campus</a>
+      </li>
     </ul>
     <h3>Título de nível 3</h3>
     <h4>Título de nível 4</h4>
@@ -40,15 +46,16 @@
       <li>Item X</li>
     </ol>
 
-    <p>Bem vindo ao site do <strong>IFPR Paranaguá</strong>.</p>
-    <p>Nossa Instituição é <em>muito legal</em>.</p>
-    <p>O nosso campus é super <mark>divertido</mark>.</p>
-    <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
       laboriosam, <del>aperiam corrupti non</del> voluptates commodi
       exercitationem dolor qui doloremque quia earum!
       <ins>Mollitia eveniet natus</ins> autem rem pariatur corrupti, quia
       laboriosam?
     </p>
+    <h2 id="instituto">O Instituto</h2>
+    <p>Bem vindo ao site do <strong>IFPR Paranaguá</strong>.</p>
+    <p>Nossa Instituição é <em>muito legal</em>.</p>
+    <p>O nosso campus é super <mark>divertido</mark>.</p>
+  
   </body>
 </html>
